@@ -1,6 +1,8 @@
 /*
 	audio: audio output interface
 
+	This wraps a bit of out123 now, with a layer of resampling using syn123.
+
 	copyright ?-2020 by the mpg123 project - free software under the terms of the LGPL 2.1
 	see COPYING and AUTHORS files in distribution or http://mpg123.org
 	initially written by Michael Hipp
@@ -10,7 +12,9 @@
 #include "mpg123app.h"
 #include "audio.h"
 #include "out123.h"
+#include "syn123.h"
 #include "common.h"
+#include "metaprint.h"
 #include "sysutil.h"
 
 #ifdef HAVE_SYS_WAIT_H
@@ -18,6 +22,64 @@
 #endif
 
 #include "debug.h"
+
+syn123_handle *sh = NULL;
+struct mpg123_fmt outfmt = { .encoding=0, .rate=0, .channels=0 };
+// Resampler buffers, first for resampling output, then for conversion.
+// Instead of sizing them for any possible input rate, I'll try to
+// loop in the output wrapper over a fixed buffer size. The syn123 resampler
+// can tell me how many samples to feed to avoid exceeding the output buffer.
+// Keep that efficient: Check if the expected samples with the input sample
+// count from last time still fit (keep one sample of headroom, generally),
+// only if not, do a full recomputation of the safe input sample count,
+// as that involves two syn123 calls instead of one ... not that it matters
+// compare to the cost of actually resampling.
+static char *resample_buffer = NULL;
+static char* resample_outbuf = NULL;
+// A good buffer size:
+// 1152*48/44.1*2*4 = 10032 ... let's go 16K.
+// This should work for final output data, too.
+// We'll loop over pieces if the buffer size is not enough for upsampling.
+static size_t resample_bytes = 1<<16;
+int do_resample = 0;
+
+static int audio_capabilities(out123_handle *ao, mpg123_handle *mh);
+
+void audio_cleanup(void)
+{
+	if(sh)
+		syn123_del(sh);
+	if(resample_outbuf)
+		free(resample_outbuf);
+	if(resample_buffer)
+		free(resample_buffer);
+}
+
+int audio_setup(out123_handle *ao, mpg123_handle *mh)
+{
+	do_resample = (param.force_rate > 0 && param.resample);
+	// Settle formats.
+	if(audio_capabilities(ao, mh))
+		return -1;
+	// Prepare resample.
+	// Resampling only for forced rate for now. In future, pitching should
+	// also be handled.
+	if(param.resample && param.force_rate)
+	{
+		int err;
+		sh = syn123_new(outfmt.rate, 1, outfmt.encoding, 0, &err);
+		if(!sh)
+		{
+			merror("Cannot initialize syn123: %s\n", syn123_strerror(err));
+			return -1;
+		}
+		resample_buffer = malloc(1<<14);
+		resample_outbuf = malloc(1<<14);
+		if(!resample_buffer || !resample_outbuf)
+			return -1;
+	}
+	return 0;
+}
 
 mpg123_string* audio_enclist(void)
 {
@@ -41,16 +103,19 @@ mpg123_string* audio_enclist(void)
 	return list;
 }
 
-static void capline(mpg123_handle *mh, long rate)
+static void capline(mpg123_handle *mh, long rate, struct mpg123_fmt *outfmt)
 {
 	int enci;
 	const int  *encs;
 	size_t      num_encs;
 	mpg123_encodings(&encs, &num_encs);
-	fprintf(stderr," %5ld |", pitch_rate(rate));
+	fprintf(stderr," %5ld |", pitch_rate(outfmt ? outfmt->rate : rate));
 	for(enci=0; enci<num_encs; ++enci)
 	{
-		switch(mpg123_format_support(mh, rate, encs[enci]))
+		int fmt = outfmt
+		?	(encs[enci] == outfmt->encoding ? outfmt->channels : 0)
+		:	mpg123_format_support(mh, rate, encs[enci]);
+		switch(fmt)
 		{
 			case MPG123_MONO:               fprintf(stderr, "   M  "); break;
 			case MPG123_STEREO:             fprintf(stderr, "   S  "); break;
@@ -73,7 +138,18 @@ void print_capabilities(out123_handle *ao, mpg123_handle *mh)
 	out123_driver_info(ao, &name, &dev);
 	mpg123_rates(&rates, &num_rates);
 	mpg123_encodings(&encs, &num_encs);
-	fprintf(stderr,"\nAudio driver: %s\nAudio device: %s\nAudio capabilities:\n(matrix of [S]tereo or [M]ono support for sample format and rate in Hz)\n rate  |", name, dev);
+	fprintf(stderr,"\nAudio driver: %s\nAudio device: ", name);
+	print_outstr(stderr, dev, 0, stderr_is_term);
+	fprintf(stderr, "\n");
+	if(do_resample)
+		fprintf( stderr, "%s\n%s\n"
+		,	"Resampler configured. Always decoding to f32 first."
+		,	"The actual output device format is in the last line." );
+
+	fprintf( stderr, "%s", "Audio capabilities:\n"
+		"(matrix of [S]tereo or [M]ono support for sample format and rate in Hz)\n"
+		"\n"
+		" rate  |" );
 	for(e=0;e<num_encs;e++)
 	{
 		const char *encname = out123_enc_name(encs[e]);
@@ -84,10 +160,18 @@ void print_capabilities(out123_handle *ao, mpg123_handle *mh)
 	for(e=0;e<num_encs;e++) fprintf(stderr,"------");
 
 	fprintf(stderr, "\n");
-	for(r=0; r<num_rates; ++r) capline(mh, rates[r]);
+	for(r=0; r<num_rates; ++r) capline(mh, rates[r], NULL);
 
-	if(param.force_rate) capline(mh, param.force_rate);
-
+	if(param.force_rate)
+	{
+		fprintf(stderr," -------");
+		for(e=0;e<num_encs;e++) fprintf(stderr,"------");
+		fprintf(stderr, "\n");
+		if(do_resample)
+			capline(mh, 0, &outfmt);
+		else
+			capline(mh, param.force_rate, NULL);
+	}
 	fprintf(stderr,"\n");
 }
 
@@ -112,9 +196,25 @@ long brate(struct ratepair *table, long arate, int count, int *last)
 	return 0;
 }
 
+// Return one of the given list of encodings matching the mask,
+// in order. Zero if none.
+static int match_enc(int mask, const int *enc_list, size_t enc_count)
+{
+	int enc = 0;
+	for(size_t i=0; i<enc_count; ++i)
+	{
+		if((enc_list[i] & mask) == enc_list[i])
+		{
+			enc = enc_list[i];
+			break;
+		}
+	}
+	return enc;
+}
+
 /* This uses the currently opened audio device, queries its caps.
    In case of buffered playback, this works _once_ by querying the buffer for the caps before entering the main loop. */
-void audio_capabilities(out123_handle *ao, mpg123_handle *mh)
+static int audio_capabilities(out123_handle *ao, mpg123_handle *mh)
 {
 	int force_fmt = 0;
 	size_t ri;
@@ -126,11 +226,20 @@ void audio_capabilities(out123_handle *ao, mpg123_handle *mh)
 	struct mpg123_fmt *outfmts = NULL;
 	int fmtcount;
 	size_t num_rates, rlimit;
+	long ntom_rate = do_resample ? 0 : param.force_rate;
+	outfmt.rate = param.force_rate;
+	outfmt.channels = 0;
+	outfmt.encoding = 0;
 
 	debug("audio_capabilities");
 	mpg123_rates(&rates, &num_rates);
 
 	mpg123_format_none(mh); /* Start with nothing. */
+
+	if(do_resample && param.verbose > 2)
+		fprintf( stderr
+		,	"Note: decoder always forced to %s encoding for resampler\n"
+		,	out123_enc_name(MPG123_ENC_FLOAT_32) );
 
 	if(param.force_encoding != NULL)
 	{
@@ -140,26 +249,89 @@ void audio_capabilities(out123_handle *ao, mpg123_handle *mh)
 		force_fmt = out123_enc_byname(param.force_encoding);
 		if(!force_fmt)
 		{
+			mpg123_string fs;
+			mpg123_init_string(&fs);
+			outstr(&fs, param.force_encoding, 0, stderr_is_term);
 			error1("Failed to find an encoding to match requested \"%s\"!\n"
-			,	param.force_encoding);
-			return; /* No capabilities at all... */
+			,	MPGSTR(fs));
+			mpg123_free_string(&fs);
+			return -1; /* No capabilities at all... */
 		}
 		else if(param.verbose > 2)
 			fprintf(stderr, "Note: forcing encoding code 0x%x (%s)\n"
 			,	force_fmt, out123_enc_name(force_fmt));
 	}
+	if(do_resample)
+	{
+		if(param.pitch != 0)
+			fprintf(stderr, "WARNING: interaction of pitch and resampler not yet settled\n");
+		// If really doing the extra resampling, output will always run with
+		// this setup, regardless of decoder.
+		int enc1 = force_fmt
+		?	force_fmt
+		:	out123_encodings(ao, param.force_rate, 1);
+		int enc2 = force_fmt
+		?	force_fmt
+		:	out123_encodings(ao, param.force_rate, 2);
+		if(!enc1 && !enc2)
+		{
+			merror( "Output device does not support forced rate %ld."
+			,	param.force_rate );
+			return -1;
+		} else if(enc1 && enc2)
+		{
+			// Should be the normal case: Mono and Stereo with the same formats.
+			// We'll store the common subset, which should normally be all.
+			outfmt.encoding = enc1 & enc2;
+			outfmt.channels = MPG123_MONO|MPG123_STEREO;
+			if(!outfmt.encoding)
+			{
+				error("No common decodings for mono and stereo output. Too weird.");
+				return -1;
+			}
+		} else if(enc1)
+		{ // Mono only.
+			outfmt.encoding = enc1;
+			outfmt.channels = 1;
+		} else
+		{ // Stereo only.
+			outfmt.encoding = enc2;
+			outfmt.channels = 2;
+		}
+		int pref_enc[] = { MPG123_ENC_FLOAT_32
+		,	MPG123_ENC_SIGNED_32, MPG123_ENC_UNSIGNED_32
+		,	MPG123_ENC_SIGNED_24, MPG123_ENC_UNSIGNED_24
+		,	MPG123_ENC_SIGNED_16, MPG123_ENC_UNSIGNED_16 };
+		int nenc = match_enc(outfmt.encoding, pref_enc, sizeof(pref_enc)/sizeof(int));
+		if(!nenc)
+		{
+			const int *encs;
+			size_t num_encs;
+			mpg123_encodings(&encs, &num_encs);
+			nenc = match_enc(outfmt.encoding, encs, num_encs);
+		}
+		if(nenc)
+			outfmt.encoding = nenc;
+		else
+		{
+			merror( "Found no encoding to match mask 0x%08x."
+			,	(unsigned int)outfmt.encoding );
+			return -1;
+		}
+	}
+
 	/* Lots of preparation of rate lists. */
-	rlimit = param.force_rate > 0 ? num_rates+1 : num_rates;
+	rlimit = ntom_rate > 0 ? num_rates+1 : num_rates;
 	outrates = malloc(sizeof(*rates)*rlimit);
 	unpitch  = malloc(sizeof(*unpitch)*rlimit);
 	if(!outrates || !unpitch)
 	{
 		error("DOOM");
-		return;
+		return -1;
 	}
 	for(ri = 0; ri<rlimit; ri++)
 	{
-		decode_rate = ri < num_rates ? rates[ri] : param.force_rate;
+		decode_rate = ri < num_rates ? rates[ri] : ntom_rate;
 		outrates[ri] = pitch_rate(decode_rate);
 		unpitch[ri].a = outrates[ri];
 		unpitch[ri].b = decode_rate;
@@ -192,15 +364,20 @@ void audio_capabilities(out123_handle *ao, mpg123_handle *mh)
 				else /* Nothing else! */
 					fmts = 0;
 			}
-			mpg123_format( mh
-			,	brate(unpitch, outfmts[fi].rate, rlimit, &unpitch_i)
-			,	outfmts[fi].channels, fmts );
+
+			if( !do_resample ||
+				((outfmts[fi].channels & outfmt.channels) == outfmts[fi].channels) )
+				mpg123_format( mh
+				,	brate(unpitch, outfmts[fi].rate, rlimit, &unpitch_i)
+				,	outfmts[fi].channels, do_resample ? MPG123_ENC_FLOAT_32 : fmts );
 		}
 	}
 	free(outfmts);
 	free(unpitch);
 
 	if(param.verbose > 1) print_capabilities(ao, mh);
+
+	return 0;
 }
 
 int set_pitch(mpg123_handle *fr, out123_handle *ao, double new_pitch)
@@ -216,6 +393,12 @@ int set_pitch(mpg123_handle *fr, out123_handle *ao, double new_pitch)
 		/* We might just not have a track handy. */
 		error("There is no current audio format, cannot apply pitch. This might get fixed in future.");
 		return 0;
+	}
+
+	if(do_resample)
+	{
+		rate = outfmt.rate;
+		format = outfmt.encoding;
 	}
 
 	param.pitch = new_pitch;
